# py_ref

./: .env.example  .git_commands.txt.un~  .gitignore  .pre-commit-config.yaml  Binary Search.ipynb  Pathfinder_1.ipynb  Tutor Intelligence Take-home Challenge.ipynb  find_free_time.ipynb  git_commands.txt  heapq_solver.ipynb  main.py  pyproject.toml  robot_tasks.ipynb  uv_commands.txt
tests/: test_algorithms.py  test_analytics.py  test_async_web.py  test_builtins.py  test_concurrency.py  test_data_model.py  test_data_science.py  test_databases.py  test_datatypes.py  test_error_handling.py  test_io.py  test_loops.py  test_patterns.py  test_performance.py  test_production.py  test_pydantic.py  test_pythonisms.py  test_regular_expressions.py  test_security_robustness.py  test_testing_advanced.py  test_testing_helpers.py
tests/goldens/: sales_report.txt
