[project]
name = "py-ref"
version = "0.1.0"
description = "Python reference / crib sheet — 201-level examples as pytest tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
    "pyyaml",
    "tomli-w",
    "tinydb",
    "networkx",
    "numpy",
    "duckdb>=1.5.2",
    "attrs>=26.1.0",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.152.1",
    "typer>=0.24.2",
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.49",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "structlog>=25.5.0",
    "bcrypt>=5.0.0",
    "pytest-mock>=3.15.1",
    "jupyter>=1.1.1",
    "ipytest>=0.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "B006",   # mutable default arg — intentionally shown in test_security_robustness.py
    "B007",   # loop variable not used
    "E501",   # line too long  (ruff-format handles this)
    "N802",   # function name should be lowercase (test helpers use capitals)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests
